--- a/src/pages/home/styles.css
+++ b/src/pages/home/styles.css
@@ -7,13 +7,29 @@
 
 }
 
-.container h1{
-    margin: 50px;
-    font-size: 24px;
+.container header{
+    width: 50%;
+    margin: 84px 0 24px;
+    font-size: 15px;
     font-weight: 700;
+    display: flex;
+    justify-content: space-between ;
+    align-items: center;
 
 }
 
+.container header img{
+    width: 60px;
+    height: 60px;
+    border-radius: 30px;
+    margin-left: 7px;
+}
+
+.container header div{
+    display: flex;
+    align-items: center;
+
+}
 .container input{
     margin: 10px ;
     background: #e6e6e6;
